--- a/template/public/BaseUser.html
+++ b/template/public/BaseUser.html
@@ -20,7 +20,7 @@
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="./info.js"></script>
+    <script src="./BaseUser.js"></script>
     <style>
         .table {
             background-color: #fff;
@@ -63,22 +63,38 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-default ">
-   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
- <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-      	
-        <li class="active"><a href="#">Link </a></li>
-        <li><a href="#">Link</a></li>
-    </ul>
-</div>
-</nav>
+<div class="row">
+    <div class="col-md-4">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <li>
+                    <a onclick="GetPage(0)">
+                        First
+                    </a>
+                </li>
 
+                <li>
+                    <a onclick="getPrevPage()">
+                        Pre
+                    </a>
+                </li>
+
+                <li>
+                    <a onclick="getNextPage()">
+                        Next
+                    </a>
+                </li>
+
+                <li>
+                    <a onclick="GetPage(AllPage-1)">
+                        Last
+                    </a>
+                </li>
+
+            </ul>
+        </nav>
+    </div>
+</div>
 
 <table class="table .table-striped" id="test">
 
@@ -95,6 +111,48 @@
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
+                    
+					  
+					<div class="form-group">
+					<label for="inputName" class="col-sm-2 control-label">Name:</label>
+                                            <div class="col-sm-10">
+                                                <textarea rows="4" class="form-control" id="inputName" placeholder="please input Name"></textarea>
+                                            </div>
+                     
+                     </div>
+                    
+
+					  
+					<div class="form-group">
+					<label for="inputPhone" class="col-sm-2 control-label">Phone:</label>
+                                            <div class="col-sm-10">
+                                                <textarea rows="4" class="form-control" id="inputPhone" placeholder="please input Phone"></textarea>
+                                            </div>
+                     
+                     </div>
+                    
+
+					  
+					<div class="form-group">
+					<label for="inputPassword" class="col-sm-2 control-label">Password:</label>
+                                            <div class="col-sm-10">
+                                                <textarea rows="4" class="form-control" id="inputPassword" placeholder="please input Password"></textarea>
+                                            </div>
+                     
+                     </div>
+                    
+
+					  
+					<div class="form-group">
+					<label for="inputUserID" class="col-sm-2 control-label">UserID:</label>
+                                            <div class="col-sm-10">
+                                                <textarea rows="4" class="form-control" id="inputUserID" placeholder="please input UserID"></textarea>
+                                            </div>
+                     
+                     </div>
+                    
+
+					  
  						<fieldset disabled>
                         <div class="form-group">
                             <label for="inputId" class="col-sm-2 control-label">Id:</label>
@@ -107,9 +165,9 @@
 
 					  
 					<div class="form-group">
-					<label for="inputName" class="col-sm-2 control-label">Name:</label>
+					<label for="inputCreatTime" class="col-sm-2 control-label">CreatTime:</label>
                                             <div class="col-sm-10">
-                                                <textarea rows="4" class="form-control" id="inputName" placeholder="please input Name"></textarea>
+                                                <textarea rows="4" class="form-control" id="inputCreatTime" placeholder="please input CreatTime"></textarea>
                                             </div>
                      
                      </div>
@@ -138,7 +196,7 @@
             </div>
             <div class="modal-body">
                 <p>Delete？</p>
-                <h4 id="deleteinfo"/>
+                <h4 id="deleteBaseUser"/>
             </div>
             <div class="modal-footer">
                 <button type="button" data-dismiss="modal" class="btn btn-primary" id="Btn_Delete">Delete</button>
@@ -149,7 +207,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <button type="button" class="btn btn-primary btn-lg" onclick="Addinfo()">
+        <button type="button" class="btn btn-primary btn-lg" onclick="AddBaseUser()">
             添加问题
         </button>
     </div>
